# psipy

./: .gitignore  README.md  pyproject.toml  requirements.txt  search.js  src.html
.github/workflows/: ci.yml
docs/: geometry_1d.md  geometry_2d.md  hamiltonian_catalog.md  physics.md  psiop.md  solver.md
geometry_evolution/: chatgpt.md  claude.md  fusion.md
notebooks/: Untitled.ipynb  hamiltonian_catalog.ipynb  microlocal_1d.ipynb  microlocal_2d.ipynb  mupsipy.ipynb  pde_symbolic_tester.ipynb  pdeolver_examples.ipynb  pdesolver_tester_Dirichlet_2d.ipynb  physics_tester.ipynb  pseudospectrum.ipynb  psinumpy.ipynb  psiop_examples.ipynb  psiop_quantization_evolution.ipynb  psiop_wkb.ipynb  riemannian_1d.ipynb  riemannian_2d.ipynb  symplectic_1d.ipynb  symplectic_2D.ipynb
scripts/: clean_tests.py  extract_deps.py  refactor_solver.py  run_tests.py  undocer.py
src/: __init__.py  cotangent_bundle.py  geometry_1d.py  geometry_2d.py  hamiltonian_catalog.py  imports.py  microlocal_1d.py  microlocal_2d.py  misc.py  mupsipy.py  physics.py  physics.py.txt  psinumpy.py  psiop.py  riemannian.py  riemannian_1d.py  riemannian_2d.py  solver.py  symplectic_1d.py  symplectic_2d.py
test_pytest/: ___psinumpy.py  test_1d_Dirichlet_pde.py  test_1d_periodic_pde.py  test_2d_Dirichlet_pde.py  test_2d_periodic_pde.py  test_microlocal_1d.py  test_microlocal_2d.py  test_physics.py  test_pseudospectrum.py  test_psiop.py  test_riemannian.py  test_riemannian_1d.py  test_riemannian_2d.py  test_symbolic_pde.py  test_symplectic_1d.py  test_symplectic_2d.py
tests/: pde_symbolic_tester.py  pdesolver_tester_Dirichlet_1d.py  pdesolver_tester_Dirichlet_2d.py  pdesolver_tester_periodic_1d.py  pdesolver_tester_periodic_2d.py  physics_tester.py  psiop_tester.py
